--- a/backend/package.json
+++ b/backend/package.json
@@ -4,13 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "server" : "nodemon server"
+    "server": "nodemon server"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "express-validator": "^6.6.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
